feat(admin): logout functionality

--- a/views/partials/_navbar_admin.ejs
+++ b/views/partials/_navbar_admin.ejs
@@ -16,3 +16,12 @@
         </ul>
     </div>
 </nav>
+
+
+
+<script>
+    // Logout form
+    function submitLogoutForm(){
+        document.getElementById("logout-form").submit()
+    }
+</script>
