--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -94,7 +94,7 @@
                     </div>
                     
                     <div class="button-section">
-                        <button class="btn btn-outline-primary btn-sm"><i class="bi bi-heart"></i><span style="font-style: normal; font-size: large;"> 0</span></button>
+                        <button class="btn btn-outline-primary btn-sm" onclick="submitBlogLikeForm('<%=blog._id%>')"><i class="bi bi-heart"></i><span style="font-style: normal; font-size: large;"> 0</span></button>
                         <button class="btn btn-outline-primary btn-sm"><i class="bi bi-chat-left-dots"></i><span style="font-style: normal; font-size: large;"> 0</span></button>
 
                         <!-- Checking whether author of a blog is logged in  -->
@@ -125,6 +125,9 @@
     <!-- Delete Blog Form -->
     <form action="" method="POST" id="blogDeleteForm"></form>  <!-- action URL will be set in the submitDeleteForm() method -->
     
+    <!-- Blog Like Form -->
+     <form action="" method="POST" id="blogLikeForm"></form>   <!-- action URL will be set in the submitBlogLikeForm() method -->
+
 
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -150,6 +153,16 @@
         const blogDeleteForm = document.getElementById('blogDeleteForm')
         blogDeleteForm.action = `/post/${blogId}?_method=DELETE` 
         blogDeleteForm.submit()
+    }
+
+
+    // method to submit like for blog
+    function submitBlogLikeForm(blogId){
+        console.log("Blog Like Request Detected")
+        console.log("Blog Id Passed: ", blogId)
+        const blogLikeForm = document.getElementById('blogLikeForm')
+        blogLikeForm.action = `/post/like/${blogId}`
+        console.log("Request: ", blogLikeForm.action)
     }
     </script>
 
