--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -131,6 +131,19 @@
                         </div>
                     </div>
 
+                    <!-- Comment Input Form -->
+                     <form action="" method="post" class="mt-4">
+                        <div class="d-flex align-items-start" style="max-width: 75%;">
+                            <!-- user profile picture -->
+                            <img src="https://i.pravatar.cc/40" alt="Profile Picture" class="rounded-circle me-3" width="40" height="40">
+                            <!-- Input -->
+                            <div class="flex-grow-1">
+                                <textarea name="comment" rows="2" class="form-control mb-3" placeholder="Write something..." required></textarea>
+                                <button type="submit" class="btn btn-primary btn-md">Comment</button>
+                            </div>
+                        </div>
+                     </form>
+
 
 
                 </div>             
