--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -132,7 +132,7 @@
                     </div>
 
                     <!-- Comment Input Form -->
-                     <form action="" method="post" class="mt-4">
+                     <form action="/post/comment/<%=blog._id%>" method="post" class="mt-4">
                         <div class="d-flex align-items-start" style="max-width: 75%;">
                             <!-- user profile picture -->
                             <img src="https://i.pravatar.cc/40" alt="Profile Picture" class="rounded-circle me-3" width="40" height="40">
