--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -91,7 +91,7 @@
                             <div class="blog-content">
                                 <h1 class="display-5 fw-bold lh-2"><%= blog.title %></h1>
                                 <p class="lead mt-4"><%= blog.content %></p>
-                                <p class="text-muted medium mt-4">Posted by <span class="fst-italic fw-semibold mx-1"> <%= blog.author.username %> </span> on <%= dateConversion(blog.createdAt.toISOString().substring(0,10)) %></p>
+                                <p class="text-muted medium mt-4">Posted by <span class="fst-italic fw-semibold mx-1"> <%= blog.author.username %> </span> on <%= dateConversion(blog.createdAt.toISOString().substring(0,10))%> </p>
                                 <!-- Option Buttons -->
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                                             <% // User Profile Picture %>
                                              <img src="https://i.pravatar.cc/40" class="rounded-circle" width="40" height="40">
                                              <div class="d-flex align-items-center justify-content-start">
-                                                <span class="fw-bold mx-2"><%=comment.commentAuthor.username%></span><span class="text-muted"><%=dateConversion(comment.createdAt.toISOString().substring(0,10))%></span>
+                                                <span class="fw-bold mx-2"><%=comment.commentAuthor.username%></span><span class="text-muted"><%=dateConversion(comment.createdAt.toISOString().substring(0,10))%> at <%=comment.createdAt.toISOString().substring(11,16)%> </span>
                                              </div>
                                         </div>
                                         <% // Comment Content %>
