--- a/views/usersListPage_admin.ejs
+++ b/views/usersListPage_admin.ejs
@@ -56,7 +56,7 @@
 
                 <tbody class="user-table">
                   <tr>
-                    <td><img src="https://i.pravatar.cc/50?random=<%= user._id%>" class="rounded-circle img-fluid"></td>
+                    <td style="width: 50px; height: 50px;"><img src="https://avatar.iran.liara.run/username?username=<%=user.username%>" width="50" height="50" class="rounded-circle me-2"></td>
                     <td><%=user.username%></td>
                     <td><%=user.role%></td>
                     <td><span class="badge bg-success">Active</span></td>
@@ -73,7 +73,7 @@
                   <div class="card mb-3">
                     <div class="card-body">
                       <div class="d-flex align-items-center">
-                        <img src="https://i.pravatar.cc/40?random=<%= user._id%>" class="rounded-circle me-4">
+                        <img src="https://avatar.iran.liara.run/username?username=<%=user.username%>" width="40" height="40" class="rounded-circle me-2">
                         <div>
                           <h6 class="mb-0"><%=user.username%></h6>
                         </div>
