--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -91,7 +91,10 @@
                             <div class="blog-content">
                                 <h1 class="display-5 fw-bold lh-2"><%= blog.title %></h1>
                                 <p class="lead mt-4"><%= blog.content %></p>
-                                <p class="text-muted medium mt-4">Posted by <span class="fst-italic fw-semibold mx-1"> <%= blog.author.username %> </span> on <%= dateConversion(blog.createdAt.toISOString().substring(0,10))%> </p>
+                                <div class="d-flex align-items-center">
+                                    <img src="https://avatar.iran.liara.run/username?username=<%=blog.author.username%>" alt="profile picture" width="30" height="30">
+                                    <p class="text-muted large mt-3 ms-2">Posted by <span class="fst-italic fw-semibold mx-1"> <%= blog.author.username %> </span> on <%= dateConversion(blog.createdAt.toISOString().substring(0,10))%> </p>
+                                </div>
                                 <!-- Option Buttons -->
                             </div>
                         </div>
