fix(comments): dynamic comment count

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -188,7 +188,7 @@
                       </button>
                       <button class="btn btn-outline-danger btn-sm">
                         <i class="bi bi-chat-left-dots"></i>
-                        <span style="font-style: normal; font-size: large;"> 0</span>
+                        <span style="font-style: normal; font-size: large;"> <%=blog.comments.length%></span>
                       </button>
                       <a href="/admin/editBlog/<%=blog._id%>">
                         <button class="btn btn-outline-danger btn-md">
