fix(likes): dynamic like count in admin panel

--- a/views/blogsListPage_admin.ejs
+++ b/views/blogsListPage_admin.ejs
@@ -184,7 +184,7 @@
                     <div>
                       <button class="btn btn-outline-danger btn-sm">
                         <i class="bi bi-heart "></i>
-                        <span style="font-style: normal; font-size: large;"> 120</span>
+                        <span style="font-style: normal; font-size: large;"> <%=blog.likes.length%></span>
                       </button>
                       <button class="btn btn-outline-danger btn-sm">
                         <i class="bi bi-chat-left-dots"></i>
