--- a/views/postsTemplate.ejs
+++ b/views/postsTemplate.ejs
@@ -102,7 +102,7 @@
                     
                     <!-- Buttons section -->
                     <div class="button-section">
-                        <button class="btn btn-outline-primary btn-sm" onclick="submitBlogLikeForm('<%=blog._id%>')"><i class="bi bi-heart"></i><span style="font-style: normal; font-size: large;"> <%= blog.likes.length %> </span></button>
+                        <button class="btn btn-outline-primary btn-sm likeButton" onclick="likeHandler('<%=blog._id%>')"><i class="bi bi-heart"></i><span style="font-style: normal; font-size: large;"> <%= blog.likes.length %> </span></button>
                         <button class="btn btn-outline-primary btn-sm" onclick="toggleCommentSection('comments-<%=blog._id%>')"><i class="bi bi-chat-left-dots"></i><span style="font-style: normal; font-size: large;"> <%=blog.comments.length%></span></button>
 
                         <!-- Checking whether author of a blog is logged in  -->
@@ -187,9 +187,6 @@
     <!-- Delete Blog Form -->
     <form action="" method="POST" id="blogDeleteForm"></form>  <!-- action URL will be set in the submitDeleteForm() method -->
     
-    <!-- Blog Like Form -->
-     <form action="" method="POST" id="blogLikeForm"></form>   <!-- action URL will be set in the submitBlogLikeForm() method -->
-
 
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -229,14 +226,33 @@
     }
 
 
-    // method to submit like for blog
-    function submitBlogLikeForm(blogId){
+    // handling the like  request mannually using fetch() to avoid page reload when clicking on like button
+    async function likeHandler(blogId){
         console.log("Blog Like Request Detected")
         console.log("Blog Id Passed: ", blogId)
-        const blogLikeForm = document.getElementById('blogLikeForm')
-        blogLikeForm.action = `/post/like/${blogId}`
-        console.log("Request: ", blogLikeForm.action)
-        blogLikeForm.submit()
+        likeURL = `/post/like/${blogId}`
+        console.log("POST Request URL: ", likeURL)
+        console.log("Sending a post request to the server (without any payload)")
+
+        try{
+            
+            const response = await fetch(likeURL, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+                // we are not sending any payload to server, so no need to specify body:{} field
+            })
+            if(response.ok) {
+                console.log("Post liked Successfully without any errors!")
+            } else {
+                console.log("Error in response from server")
+            }
+
+        }
+        catch(error){
+            console.error("Like opearation failed, reason:", error)
+        }
     }
     </script>
 
