feat(controller): redirect user to OTP page after submitting email, username and password

--- a/views/otpPage_user.ejs
+++ b/views/otpPage_user.ejs
@@ -44,7 +44,7 @@
               <h4 class="text-center mb-2 text-primary">Verify OTP</h4>
               
               <hr>
-              <label class="form-label mb-5">We have sent an OTP to <span class="fw-bold">realemailaddress@domainname.com</span>, check your mail box.</label>
+              <label class="form-label mb-5">We have sent an OTP to <span class="fw-bold"><%=email%></span>, check your mail box.</label>
               
               <%// OTP entering form%>
               <form action="" method="post">
