--- a/views/otpPage_user.ejs
+++ b/views/otpPage_user.ejs
@@ -51,6 +51,7 @@
                 <div class="mb-3">
                   <label for="otp" class="form-label">Enter the 6-digit OTP</label>
                   <input type="text" class="form-control otp-input mb-5" id="otp" maxlength="6" placeholder="------" required>
+                  <input type="text" class="d-none" value="<%= email%>">
                 </div>
                 <div class="d-grid">
                   <button type="submit" class="btn btn-primary btn-lg">Submit</button>
